# rust-sdk

./: .env.example  Cargo.toml  Makefile  README.md
.github/: pull_request_template.md
.github/workflows/: ci.yaml
src/: client.rs  error.rs  helper.rs  lib.rs  tests.rs
src/auth/: mod.rs
src/auth_manager/: auth_client.rs  mod.rs  universal_auth.rs
src/client/: mod.rs
src/models/: mod.rs
src/resources/: helper.rs  mod.rs
src/resources/kms/: create.rs  decrypt.rs  delete.rs  encrypt.rs  get.rs  helper.rs  list.rs  mod.rs  sign.rs  types.rs  update.rs  verify.rs
src/resources/secrets/: create.rs  delete.rs  get.rs  helper.rs  list.rs  mod.rs  types.rs  update.rs
src/secret_manager/: create_secret.rs  delete_secret.rs  get_secret.rs  list_secrets.rs  mod.rs  secret_client.rs  update_secret.rs
tests/: client_test.rs
