[package]
name = "infisical-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.182", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.22", features = [
  "json",
  "rustls-tls-manual-roots",
] }
tokio = { version = "1.46.1", features = ["full"] }
thiserror = "1.0"
rustls-platform-verifier = "0.1.0"
rand = "0.9.1"
