[package]
name = "infisical"
version = "0.0.1"
edition = "2021"
authors = ["Daniel H. <daniel@infisical.com>", "Andrey L. <andrey@infisical.com>"]
description = "Official Rust SDK for Infisical"
license = "MIT"
readme = "README.md"
repository = "https://github.com/infisical/rust-sdk"
keywords = ["infisical", "secrets", "sdk", "api"]
categories = ["api-bindings"]
homepage = "https://infisical.com"
include = ["**/*.rs", "Cargo.toml"]

[dependencies]
reqwest = { version = "0.12", features = ['json', 'blocking', 'rustls-tls'] }
tokio = { version = "1.46", features = ["full"] }
serde = { version = "1", features = ['derive'] }
serde_json = "1"
thiserror = "1"
url = "2.5"

[dev-dependencies]
dotenvy = "0.15"
